# Inverse-Kinematics-Solver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: basic_usage.py
src/kinematics/: forward.py
src/robot/: model.py
src/solvers/: analytical.py  base.py  numerical.py
src/trajectory/: planner.py
src/visualization/: plotter.py
src/workspace/: generator.py
tests/: test_kinematics.py  test_trajectory.py
