[project]
name = "inverse-kinematics-solver"
version = "0.1.0"
description = "A 3DOF Robot Arm Inverse Kinematics Visualizer"
authors = [
    { name = "Gemini CLI", email = "gemini-cli@example.com" }
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
]
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "PL", "B"]
ignore = ["PLR0913", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
